MFLT-9887 Use "Developer Mode" instead of other names (#462)
* MFLT-9887 Use "Developer Mode" instead of other names

 Matching link changes have been done on the app side and will be
 shipped soon.

* Rename component use also

* Prettified Code!

---------

Co-authored-by: fnune <fnune@users.noreply.github.com>

--- a/blog/2022-09-30.mdx
+++ b/blog/2022-09-30.mdx
@@ -91,7 +91,7 @@ number of configuration options.
     [Android 12L](https://developer.android.com/about/versions/12/12L) and
     [Android 13](https://developer.android.com/about/versions/13).
   - Added:
-    [Development Mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420)
+    [Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420)
     to make the integration and testing experience easier.
   - Added: C/C++ API for reporting custom metrics.
   - Added: Support for
