--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -487,7 +487,7 @@ the system (deprecated - see below).
 
 During development, you will want to increase the frequency at which data is
 sent. To do this, enable
-[development mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420)
+[Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420)
 
 :::
 
