--- a/docs/android/uploading-android-diagnostics.mdx
+++ b/docs/android/uploading-android-diagnostics.mdx
@@ -13,7 +13,7 @@ start uploading device diagnostics information into Memfault.
 
 During development, it makes sense to configure the Bort SDK to send data at a
 higher frequency. You can do this by enabling
-[development mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420)
+[Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420)
 
 ## Using the Memfault CLI
 
