--- a/docs/linux/ota.mdx
+++ b/docs/linux/ota.mdx
@@ -5,7 +5,7 @@ sidebar_label: OTA Management
 ---
 
 import { ProjectMagicLink } from "@site/src/components/ProjectMagicLink";
-import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
+import { EnableServerSideDeveloperMode } from "@site/src/components/EnableServerSideDeveloperMode";
 import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
 
 This tutorial covers how to manage your embedded Linux over-the-air update flow
@@ -208,7 +208,7 @@ mode setting to Cohorts.
   the hawkBit polling interval section.
 </p>
 
-<EnableServerSideDevelopmentMode />
+<EnableServerSideDeveloperMode />
 
 ### Activate the Release
 
@@ -316,7 +316,7 @@ under "Options" and select the "Abort Rollout" option.
 ### Disable development mode
 
 Remember to undo the steps you took in
-[Enable development mode](#enable-development-mode) and to configure your Cohort
+[Enable Developer Mode](#enable-developer-mode) and to configure your Cohort
 with a value that'll work for your project on production.
 
 [3]: https://sbabic.github.io/swupdate
