--- a/docs/platform/fleet-sampling.mdx
+++ b/docs/platform/fleet-sampling.mdx
@@ -77,7 +77,7 @@ have the following values:
 | Synced         | Device is using the configuration as seen on the Device Details page                                                       |
 
 When using
-[Bort's Development Mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420),
+[Bort's Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420),
 an immediate configuration update can be requested after changing the fleet
 sampling configuration, instead of waiting for the next regular time the device
 is going to poll its configuration.
