--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -166,29 +166,29 @@ Below is a list of the APIs and payloads that may be rate-limited:
   </tbody>
 </table>
 
-### Server-Side Development Mode
+### Server-Side Developer Mode
 
-Memfault allows you to enable Development Mode for a specific Device in your
-Project. This mode allows you to bypass the rate limits for that Device
+Memfault allows you to enable Server-Side Developer Mode for a specific Device
+in your Project. This mode allows you to bypass the rate limits for that Device
 temporarily. This is useful for development and testing purposes. To enable
-Development Mode for a Device, navigate to the Device Details page for that
-Device and click the "Development Mode" tab. In here you will find detailed
-information on how Server-Side Development Mode works and how to enable it for a
+Server-Side Developer Mode for a Device, navigate to the Device Details page for
+that Device and click the "Developer Mode" tab. In here you will find detailed
+information on how Server-Side Developer Mode works and how to enable it for a
 Device.
 
-![The interface to enable server-side development mode for a device in the Memfault app](/img/docs/platform/server-side-dev-mode-ui.png)
+![The interface to enable Server-Side Developer mode for a device in the Memfault app](/img/docs/platform/server-side-dev-mode-ui.png)
 
-Server-Side Development Mode is designed to be used in conjunction with the
+Server-Side Developer Mode is designed to be used in conjunction with the
 accompanying features in the Memfault SDKs:
 
 - [Developer Mode](/docs/linux/reference-memfaultctl-cli/#developer-mode) on
   Linux
-- [Development Mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420)
+- [Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420)
   on Android
 - There is no equivalent feature for MCU Projects.
 
-The Developer Mode on Linux and the Development Mode on Android are used to
-enable additional features in the Memfault SDKs.
+Developer Mode on Android and Linux is used to enable additional features in the
+Memfault SDKs.
 
-The number of Devices that can be put in Development Mode simultaneously is
-currently limited.
+The number of Devices that can be put in Server-Side Developer Mode
+simultaneously is currently limited.
