Distinguish Issue and Metric notifications (#466)
Add some details on Issue notifications, and rename the sidebar for
Alerts to indicate they're specific to Metrics

--- a/docs/platform/issue-management.mdx
+++ b/docs/platform/issue-management.mdx
@@ -134,3 +134,20 @@ are displayed.
 
 To view Issues that have been hidden due to their traces being expired, you can
 click "All" in the filter panel of the Issues view.
+
+## Issue Notifications
+
+Issues will trigger email notifications to users on the following Issue events:
+
+- Creation
+- Comment added
+- Modified
+- Re-open
+
+These emails can be disabled from the
+[User Settings](https://app.memfault.com/organizations/-/projects/-/settings)
+panel:
+
+<p align="center">
+  <img src="/img/docs/platform/user-notification-settings.png" />
+</p>
