--- a/docs/platform/alerts.mdx
+++ b/docs/platform/alerts.mdx
@@ -1,7 +1,7 @@
 ---
 id: alerts
-title: Alerts
-sidebar_label: Alerts
+title: Metric Alerts
+sidebar_label: Metric Alerts
 ---
 
 The Alerts feature will send a team an alert when heartbeat events satisfy a
