--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -27,6 +27,7 @@ sidebar_label: Memfault Terminology
 | Issue <a id="issue"></a>                       | A logical grouping of Traces with the same signature.                                                                                                                                                                                                                                                                                                                                                                                  |
 | Issue State - Open                             | An Issue has not yet been fixed and remains in the list of Issues                                                                                                                                                                                                                                                                                                                                                                      |
 | Issue State - Resolved                         | An Issue has been closed and will no longer appear in the list of Issues                                                                                                                                                                                                                                                                                                                                                               |
+| MAR (Memfault Archive)                         | A compressed file format containing several types of data (e.g. logs, metrics, bug reports) that can be uploaded to Memfault for analysis.                                                                                                                                                                                                                                                                                             |
 | Metric                                         | A key-value pair representing a useful piece of information that a Device records. A few examples include uptime, free memory, battery life, current state of power                                                                                                                                                                                                                                                                    |
 | Organization                                   | Entity which contains many projects and users. Typically one organization per company.                                                                                                                                                                                                                                                                                                                                                 |
 | Project                                        | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
