Add link to esp32 standalone example (#470)
Switch the `:::tip`/`:::note` admonition for purely aesthetic reasons.

--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -24,7 +24,7 @@ This integration is tested on the
 [ESP32-WROVER-KIT V4.1](https://docs.espressif.com/projects/esp-idf/en/v4.4.1/esp32/hw-reference/esp32/get-started-wrover-kit.html),
 but applies similarly to any ESP32-based board.
 
-:::tip
+:::note
 
 Currently Memfault supports the following ESP32 part families. If it's not
 listed, we might be working on it already! Drop us a note at
@@ -33,7 +33,20 @@ listed, we might be working on it already! Drop us a note at
 - [ESP32 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32/get-started/index.html)
 - [ESP32-S2 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s2/get-started/index.html)
 - [ESP32-S3 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s3/get-started/index.html)
-- [ESP32-C3 (RISC-V)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32c3/get-started/index.html)
+- [ESP32-C3/C6 (RISC-V)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32c3/get-started/index.html)
+
+:::
+
+:::tip
+
+An example project demonstrating the result of this integration can be found
+here, for reference:
+
+https://github.com/memfault/esp32-standalone-example
+
+Memfault also maintains a full demonstration project in the Memfault Firmware
+SDK, under
+[`examples/esp32`](https://github.com/memfault/memfault-firmware-sdk/blob/dbe84b934757ce8ed78cf7840ff1b701f5657fe9/examples/esp32/README.md)
 
 :::
 
