Revert "Update notifications->default doc section (#467)" (#474)
This reverts commit a2aeea112054e3842bfd3e6f7860179d89012eba.

--- a/docs/platform/notifications.mdx
+++ b/docs/platform/notifications.mdx
@@ -106,22 +106,10 @@ Default Target lists are a way of pre-setting your target selections, so that
 your most commonly used configuration can be pre-filled within newly created
 Alerts, speeding up your workflow.
 
-This can also be used to set Issue Notifications to target non-user Notification
-Targets (for example, Slack, or non-user email targets).
-
-This setting can be found under
-[Settings->Notifications->Defaults](https://app.memfault.com/organizations/-/projects/-/settings/notifications/defaults).
-
 NOTE: The "default default" as it were, is `@everyone` (All Project Members),
 but this can be changed to be any combination you want of Project Members,
 External Targets and/or Group Targets.
 
 <figure>
-  <p align="center">
-    <img
-      src="/img/docs/platform/settings-notifs-defaults.png"
-      alt=""
-      width="500"
-    />
-  </p>
+  <img src="/img/docs/platform/settings-notifs-defaults.png" alt="" />
 </figure>
