--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -9,5 +9,6 @@
 | Dialog DA1469x                    |          [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)          |
 | NXP MCUXpresso RT1060             | [NXP MCUXpresso SDK for i.MX RT Guide](/docs/mcu/arm-nxp-mcuxpresso-guide) |
 | Zephyr RTOS                       |             [Zephyr Integration Guide](/docs/mcu/zephyr-guide)             |
+| ARM Cortex-R                      |       [ARM Cortex-R Integration Guide](/docs/mcu/arm-cortex-r-guide)       |
 
 </center>
