Mention the timezone sysprop for Android, and what it is used for (#484)

--- a/docs/android/android-builtin-metrics.mdx
+++ b/docs/android/android-builtin-metrics.mdx
@@ -195,6 +195,14 @@ These metrics would be good candidates for Attributes, to enable e.g. searching
 for devices with a given system property, or checking the properties for a
 specific device.
 
+:::info
+
+`persist.sys.timezone` is collected by default, (along with `ro.build.type`).
+This is used in the Memfault dashboard to enable browsing in the device's time
+zone.
+
+:::
+
 ### Connectivity Metrics
 
 **Collected Since Bort 4.4.0**
