Auto insert latest SDK version to zephyr manifest (#487)
Instead of a nightly job, just auto-insert it.

--- a/docs/mcu/zephyr-guide.mdx
+++ b/docs/mcu/zephyr-guide.mdx
@@ -7,7 +7,7 @@ description: Integrate Memfault on Zephyr RTOS.
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
 import { EnableServerSideDeveloperMode } from "@site/src/components/EnableServerSideDeveloperMode";
-import ZephyrManifest from "@site/src/pages/_partials/_zephyr-manifest.mdx";
+import { ZephyrManifest } from "@site/src/components/LatestZephyrManifest";
 
 This tutorial will go over integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
