Add note about setting primary sw type (#488)
* Add note about setting primary sw type

![image](https://github.com/memfault/memfault-docs/assets/2538614/1d6fc2f0-1ffd-4164-8b74-d5c6279dffeb)

* Update docs/platform/software-version-hardware-version.mdx

Co-authored-by: Thomas Sarlandie <thomas@sarlandie.net>

* Prettified Code!

---------

Co-authored-by: Thomas Sarlandie <thomas@sarlandie.net>
Co-authored-by: noahp <noahp@users.noreply.github.com>

--- a/docs/platform/software-version-hardware-version.mdx
+++ b/docs/platform/software-version-hardware-version.mdx
@@ -72,6 +72,9 @@ The **Primary Software Type** is used to populate the Software Version field on
 the individual Device page, as well as when filtering for the device, and how it
 appears in various fleet-level charts.
 
+You can configure the **Primary Software Type** in Settings –> Hardware –>
+Create Hardware Version.
+
 :::tip Requirements
 
 Software Types must be between 1 and 128 characters long and can only contain
