MFLT-10102 Add Metric charts by population to docs (#490)
* ### Summary
 Adds mention of Software Version and Cohort based metric charts to the docs. We dont have the finalized UI for the chart itself so we are using an ss of chart creation.

 ### Internal Docs
 https://memfault.slack.com/archives/C058X7VPBL1/p1685542417476549

 ### Testing
 yarn start

* Prettified Code!

* address comments

* Prettified Code!

* Update docs/platform/charts.mdx

Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

* Prettified Code!

* Replace screen shot with updated metrics charts

* Prettified Code!

* Crop screenshot to remove React Query flower

* Run volta pin node@18 yarn@1

---------

Co-authored-by: utkuoymak <utkuoymak@users.noreply.github.com>
Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -85,6 +85,21 @@ For example, if data is received on January 1st, the metric charts will show
 this data on January 2nd. Only values that pass the
 ["Ingress Filtering" are included](/docs/platform/metrics#ingress-filtering).
 
+In addition to creating metric charts based on time, it's also possible to base
+them on aggregations by Software Version or Cohort. This flexibility allows for
+comparison of metrics between specific population groups, making it an important
+tool for targeted analysis. Note that this type of chart only supports the
+Min/Mean/Max aggregation method. With this type of chart you can look at a
+particular metric for a certain population across all time. This holistic view
+can provide crucial insights into long-term trends and patterns.
+
+<ImageFigure
+  src="/img/docs/platform/sv-metric-charts.png"
+  alt="Creating a metrics chart by population"
+  title="Creating a metrics chart by population"
+  style={{ maxWidth: "900px" }}
+/>
+
 For more information about adding metrics to your devices:
 
 - Bare Metal/RTOS: see the [Metrics Guide](https://mflt.io/embedded-metrics)
