Small clarification on dev mode (#499)
Make it clear that it's available on all device SDKs

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -178,6 +178,12 @@ Device.
 
 ![The interface to enable Server-Side Developer mode for a device in the Memfault app](/img/docs/platform/server-side-dev-mode-ui.png)
 
+Server-side Developer Mode is compatible with all Memfault Device SDKs:
+
+- Linux
+- Android
+- MCU
+
 Server-Side Developer Mode is designed to be used in conjunction with the
 accompanying features in the Memfault SDKs:
 
